--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-loader": "^2.1.0",
+    "es6-promise": "^4.2.5",
     "foundation-sites": "^6.5.2",
     "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
+    "vue-loader": "^15.6.2",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
   },
